fixed project header text on small screens

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -463,6 +463,9 @@ figure {
       &:before {
         @include material-shadow();
       }
+      @include media (max-width 1200px){
+          font-size: 90%;
+      }
     }
     p {
       @include material-shadow();
